--- a/sample app-nginx/ingress.yaml
+++ b/sample app-nginx/ingress.yaml
@@ -1,8 +1,8 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: basic
-  namespace: default
+  name: basic-proxy
+  namespace: pod-nginx
 spec:
   rules:
   - http:
