--- a/gitops-sample/three-tier-app/k8s/web-deployment.yaml
+++ b/gitops-sample/three-tier-app/k8s/web-deployment.yaml
@@ -18,7 +18,8 @@ spec:
     spec:
       containers:
       - name: web-container
-        image: harbor.tanzu.lab/library/3ta-web:v0.1 # WEB 이미지 (빌드 후 푸시 필요)
+        # Canary test 시, v0.1 배포 후, v0.2로 전환
+        image: postout7979/3ta-web:v0.1 # WEB 이미지 (빌드 후 푸시 필요)
         ports:
         - containerPort: 5000
         env:
