--- a/samples/nginx/ingress.yaml
+++ b/samples/nginx/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: basic-proxy
+  name: nginx
   namespace: pod-nginx
 spec:
   rules:
@@ -11,6 +11,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: srvclb-ngnx
+            name: nginx
             port:
               number: 80
