--- a/samples/guestbook/redis-follower-deployment.yaml
+++ b/samples/guestbook/redis-follower-deployment.yaml
@@ -21,8 +21,8 @@ spec:
     spec:
       containers:
       - name: follower
-        #image: us-docker.pkg.dev/google-samples/containers/gke/gb-redis-follower:v2
-        image: tkgs-harbor.tanzu.lab/guestbook/gb-redis-follower:v2
+        image: us-docker.pkg.dev/google-samples/containers/gke/gb-redis-follower:v2
+        #image: tkgs-harbor.tanzu.lab/guestbook/gb-redis-follower:v2
         resources:
           requests:
             cpu: 100m
