--- a/samples/guestbook/redis-leader-deployment.yaml
+++ b/samples/guestbook/redis-leader-deployment.yaml
@@ -19,8 +19,8 @@ spec:
     spec:
       containers:
       - name: leader
-        #image: redis:6.0.5
-        image: tkgs-harbor.tanzu.lab/guestbook/redis:6.0.5
+        image: redis:6.0.5
+        #image: harbor.tanzu.lab/guestbook/redis:6.0.5
         resources:
           requests:
             cpu: 100m
