--- a/standard-package/grafana/values.yaml
+++ b/standard-package/grafana/values.yaml
@@ -25,14 +25,14 @@ grafana:
   service:
     port: 80
     targetPort: 3000
-    type: LoadBalancer
+    type: ClusterIP
 ingress:
-  enabled: false
+  enabled: true
   prefix: /
   servicePort: 80
-  virtual_host_fqdn: grafana.system.tanzu
-    #  tlsCertificate:
-    #    tls:
-    #      crt:
-    #      key:
+  virtual_host_fqdn: grafana.tanzu.lab
+  tlsCertificate:
+    tls:
+      crt:
+      key:
 namespace: tanzu-system-dashboards
