--- a/samples/three-tier-app/k8s/kustomization.yaml
+++ b/samples/three-tier-app/k8s/kustomization.yaml
@@ -5,7 +5,11 @@ resources:
   - db-service.yaml
   - db-deployment.yaml
   - ap-service.yaml
+  - ap-service-v2.yaml
   - ap-deployment.yaml
+  - ap-deployment-v2.yaml
   - web-service.yaml
   - web-deployment.yaml
-  - ingress.yaml
+  - web-service-v2.yaml
+  - web-deployment-v2.yaml
+  - http-proxy.yaml
