--- a/samples/three-tier-app/k8s/web-deployment-v2.yaml
+++ b/samples/three-tier-app/k8s/web-deployment-v2.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: web-deployment
+  name: web-deployment-v2
   labels:
     app: web-v2
 spec:
