--- a/samples/three-tier-app/k8s/http-proxy.yaml
+++ b/samples/three-tier-app/k8s/http-proxy.yaml
@@ -12,4 +12,8 @@ spec:
         - name: web-service
           port: 5000
           weight: 50
+      services:
+        - name: web-service-v2
+          port: 6000
+          weight: 50
 
