--- a/samples/three-tier-app/k8s/kustomization.yaml
+++ b/samples/three-tier-app/k8s/kustomization.yaml
@@ -8,4 +8,8 @@ resources:
   - ap-deployment.yaml
   - web-service.yaml
   - web-deployment.yaml
+  - ap-service-v2.yaml
+  - web-service-v2.yaml
+  - ap-deployment-v2.yaml
+  - web-deployment-v2.yaml
   - http-proxy.yaml
