--- a/samples/three-tier-app/k8s/kustomization.yaml
+++ b/samples/three-tier-app/k8s/kustomization.yaml
@@ -9,3 +9,7 @@ resources:
   - web-service.yaml
   - web-deployment.yaml
   - http-proxy.yaml
+  - ap-service-v2.yaml
+  - ap-deployment-v2.yaml
+  - web-service-v2.yaml
+  - web-deployment-v2.yaml
