--- a/samples/webinfo/k8s/kustomization.yaml
+++ b/samples/webinfo/k8s/kustomization.yaml
@@ -1,4 +1,6 @@
-client-info-deployment.yaml
-client-info-service.yaml
-client-info-httpproxy.yaml
-hpa.yaml
+kind: Kustomization
+resources:
+  - client-info-deployment.yaml
+  - client-info-service.yaml
+  - client-info-httpproxy.yaml
+  - hpa.yaml
