--- a/samples/webinfo/k8s/client-info-httpproxy.yaml
+++ b/samples/webinfo/k8s/client-info-httpproxy.yaml
@@ -1,5 +1,5 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: projectcontour.io/v1
+kind: HTTPProxy
 metadata:
   name: client-info
   labels:
