--- a/samples/webinfo/k8s/hpa.yaml
+++ b/samples/webinfo/k8s/hpa.yaml
@@ -6,7 +6,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: webinfo
+    name: client-info-web-deployment
   minReplicas: 1
   maxReplicas: 3
   metrics:
