--- a/samples/three-tier-app/k8s/http-proxy.yaml
+++ b/samples/three-tier-app/k8s/http-proxy.yaml
@@ -11,7 +11,7 @@ spec:
       services:
         - name: web-service
           port: 5000
-          weight: 50
-        - name: web-service-v2
-          port: 5000
-          weight: 50
+            #          weight: 50
+            #        - name: web-service-v2
+            #          port: 5000
+            #          weight: 50
