--- a/samples/three-tier-app/k8s/ap-deployment.yaml
+++ b/samples/three-tier-app/k8s/ap-deployment.yaml
@@ -17,10 +17,9 @@ spec:
     spec:
       containers:
       - name: ap-container
-        # Canary test 시, v0.1 배포 후, v0.2로 전환
-        image: harbor.tanzu.lab/library/3ta-ap:v0.1 # AP 이미지 (빌드 후 푸시 필요)
+#        image: harbor.tanzu.lab/library/3ta-ap:v0.1 # AP 이미지 (빌드 후 푸시 필요)
         # public git
-#        image: postout7979/3ta-ap:v0.1 # AP 이미지 (빌드 후 푸시 필요)
+        image: postout7979/3ta-ap:v0.2 # AP 이미지 (빌드 후 푸시 필요)
         ports:
         - containerPort: 5001
         env:
