--- a/samples/three-tier-app/k8s/ap-service.yaml
+++ b/samples/three-tier-app/k8s/ap-service.yaml
@@ -12,4 +12,8 @@ spec:
     - protocol: TCP
       port: 5001
       targetPort: 5001
+  sessionAffinity: ClientIP
+  sessionAffinityConfig:
+    clientIP:
+    timeoutSeconds: 180 # Seconds
   type: ClusterIP # 클러스터 내부에서만 접근 가능
