--- a/samples/three-tier-app/k8s/web-service.yaml
+++ b/samples/three-tier-app/k8s/web-service.yaml
@@ -12,5 +12,9 @@ spec:
     - protocol: TCP
       port: 5000
       targetPort: 5000
+  sessionAffinity: ClientIP
+  sessionAffinityConfig:
+    clientIP:
+      timeoutSeconds: 180 # seconds
   type: ClusterIP # 외부 접근용 (클라우드에서는 LoadBalancer 사용)
     #  type: LoadBalancer
