--- a/samples/three-tier-app/k8s/web-deployment.yaml
+++ b/samples/three-tier-app/k8s/web-deployment.yaml
@@ -10,6 +10,11 @@ spec:
   selector:
     matchLabels:
       app: web
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 2
+      maxUnavailable: 1
   template:
     metadata:
       labels:
