--- a/samples/three-tier-app/k8s/web-deployment-v2.yaml
+++ b/samples/three-tier-app/k8s/web-deployment-v2.yaml
@@ -6,10 +6,15 @@ metadata:
   labels:
     app: web-v2
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: web-v2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 2
+      maxUnavailable: 1
   template:
     metadata:
       labels:
