--- a/samples/three-tier-app/rollouts/web-rollouts.yaml
+++ b/samples/three-tier-app/rollouts/web-rollouts.yaml
@@ -42,14 +42,13 @@ spec:
       maxUnavailable: 0
       steps:
         - setWeight: 20
-        - pause:
+        - pause: 
             duration: 1m # 1 minutes
         - setWeight: 40
-        - pause:
+        - pause: 
             duration: 1m # 1 minutes
         - setWeight: 60
-        - pause:
+        - pause: 
             duration: 1m # 1 minutes
         - setWeight: 80
-        - pause:
-            duration: {} # indefinitely
+        - pause: {} # indefinitely
