--- a/oss/grafana-operator/grafana-deployment.yaml
+++ b/oss/grafana-operator/grafana-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       #      ingressClassName: 
       rules:
-        - host: gf-op.tanzu.lab
+        - host: grafana.tanzu.lab
           http:
             paths:
               - backend:
