--- a/avi-ako/default-values.yaml
+++ b/avi-ako/default-values.yaml
@@ -29,7 +29,7 @@ AKOSettings:
   apiServerPort: 8080 # Internal port for AKO's API server for the liveness probe of the AKO pod default=8080
   deleteConfig: 'false' # Has to be set to true in configmap if user wants to delete AKO created objects from AVI
   disableStaticRouteSync: 'false' # If the POD networks are reachable from the Avi SE, set this knob to true.
-  clusterName: tkc01   # A unique identifier for the kubernetes cluster, that helps distinguish the objects for this cluster in the avi controller. // MUST-EDIT
+  clusterName: test-tkc   # A unique identifier for the kubernetes cluster, that helps distinguish the objects for this cluster in the avi controller. // MUST-EDIT
   cniPlugin: '' # Set the string if your CNI is calico or openshift or ovn-kubernetes. For Cilium CNI, set the string as cilium only when using Cluster Scope mode for IPAM and leave it empty if using Kubernetes Host Scope mode for IPAM. enum: calico|canal|flannel|openshift|antrea|ncp|ovn-kubernetes|cilium
   enableEVH: false # This enables the Enhanced Virtual Hosting Model in Avi Controller for the Virtual Services
   layer7Only: false # If this flag is switched on, then AKO will only do layer 7 loadbalancing.
