--- a/samples/avi-monitor/2tier/docker/web/nginx.conf
+++ b/samples/avi-monitor/2tier/docker/web/nginx.conf
@@ -20,7 +20,7 @@ server {
 
     # /api 경로로 들어오는 요청을 ap 컨테이너로 프록시
     location /api {
-        proxy_pass http://ap:5000;
+        proxy_pass http://avi-ap:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
