--- a/samples/podinfo/service.yaml
+++ b/samples/podinfo/service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   #  type: ClusterIP
   type: LoadBalancer
-  loadBalancerClass: ako.vmware.com/avi-lb
+    #  loadBalancerClass: ako.vmware.com/avi-lb
   selector:
     app: podinfo
   ports:
