--- a/samples/avi-monitor/3tier/docker/web/nginx.conf
+++ b/samples/avi-monitor/3tier/docker/web/nginx.conf
@@ -18,6 +18,12 @@ server {
 	index dashboard.html;
     }
 
+    location /chart {
+        root /app/templates;
+        index chart.html;
+    }
+
+
     # /api 경로로 들어오는 요청을 ap 컨테이너로 프록시
     location /api {
         proxy_pass http://avi-ap:5000;
